--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.0.0",
+  "version": "1.0.1",
   "name": "@donavon/prevent-default",
-  "description": "A wrapper that calls `event.preventDefault()` for you.",
+  "description": "A wrapper that calls event.preventDefault() for you.",
   "keywords": [
     "preventDefault",
     "event",
